# melee-tv-client

./: .gitignore  .releaserc.json  .tool-versions  CHANGELOG.md  README.md  melee-tv.key.pub  package-lock.json  package.json
.github/workflows/: release-windows.yml
scripts/: sync-version.cjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
